# Analysis_RMP_Ratings

./: .gitattributes  .gitignore  LICENSE  Makefile  Project_Code_Evan.ipynb  Q1.ipynb  Q10.ipynb  Q1_Concise.ipynb  Q2.ipynb  Q2_New.ipynb  Q4.ipynb  Q5_Q6.ipynb  Q7-10_clean.ipynb  Q7.ipynb  README.md  analysis_utils.py  df_merged.csv  main.py  pyproject.toml  reportlink.txt  sm.py  streamlit_app_fixed.py  streamlit_regression.py
.github/workflows/: ci.yml  site.yml
.ipynb_checkpoints/: Q2-checkpoint.ipynb
app/: streamlit_app.py
data/: Q10df.csv  df_capstone.csv  df_capstone_tags.csv
notebooks/: Q1_Concise.ipynb  Q5_Q6.ipynb  Q7-10_clean.ipynb  Q7.ipynb  Q7sklearn.ipynb  analysis.ipynb  check.ipynb
reports/: results.json
scripts/: main copy.py  main.py  run_analysis.py  streamlit_app.py  streamlit_regression.py
scripts/pages/: 1_Pepper_Analysis.py  2_Regression.py  3_Classification.py
site/: _quarto.yml  data.qmd  extensions.qmd  gender.qmd  index.qmd  methods.qmd  models.qmd  styles.scss  tags.qmd
src/ape/: __init__.py  classify.py  config.py  data.py  effects.py  model_selection.py  questions.py  regression.py  stats_tests.py  viz.py
tests/: test_classify.py  test_data.py  test_effects.py  test_model_selection.py  test_questions_smoke.py  test_regression.py  test_stats_tests.py  test_viz.py
