[project]
name = "ape"
version = "0.1.0"
description = "Assessing Professor Effectiveness — RateMyProfessor analysis (NYU DS-GA 1001 capstone)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
app = ["streamlit>=1.38"]
docs = ["jupyter>=1.0", "nbformat>=5.10", "nbclient>=0.10", "jupytext>=1.16", "ipykernel>=6.29", "tabulate>=0.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
